# PMPP

./: README.md
pmpp_ex1/src/: filtering.cu  image.cpp
src/: CMakeLists.txt  cpu_brute_force.h  cuda_timer.h  gpu_brute_force.cu  main.cpp
